# nxml-rs

./: Cargo.toml  LICENSE  check.sh  readme.md  rustfmt.toml
.github/workflows/: ci.yml
nxml-rs/: Cargo.toml  build.rs
nxml-rs-macros/: Cargo.toml
nxml-rs-macros/src/: lib.rs
nxml-rs/src/: element.rs  lib.rs  parser.rs  tokenizer.rs
src/: element.rs  lib.rs  parser.rs  tokenizer.rs
