[workspace]
resolver = '2'
members = ['nxml-rs', 'nxml-rs-macros']

[workspace.package]
version = '0.1.0'
license = 'MIT'
edition = '2021'
readme = 'readme.md'
homepage = 'https://github.com/necauqua/nxml-rs'
repository = 'https://github.com/necauqua/nxml-rs'
authors = ['Anton Bulakh <him@necauq.ua>']

[workspace.dependencies]
nxml-rs-macros = { path = 'nxml-rs-macros', version = '0.1.0' }
