[package]
name = 'nxml-rs-macros'
description = 'Procedural macros for the nxml-rs crate'

version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }

[lib]
proc-macro = true

[dependencies]
proc-macro2 = '1.0'
quote = '1.0'
syn = { version = '2.0' }
